--- a/style.css
+++ b/style.css
@@ -24,6 +24,10 @@
 .card img{
     border-radius: 5px;
 }
+.card img:hover{
+    transform: scale(1.1);
+    transition: all 2s;
+}
  .card{
      border: none;
  }
